--- a/recipes/pie.css
+++ b/recipes/pie.css
@@ -23,3 +23,9 @@
         {
         font-size: 14px;    
         }
+
+img 
+        {
+        height: auto;
+        width: 400px;            
+        }
